--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -15,7 +15,11 @@
       <a href="" rel="noopener" class="navigation-items">Contact Us</a>
     </div>
     <div id="homepage">
-      <h1 class="homepage-title">HARVEY BIRDMAN</h1>
+      <h1 class="homepage-title">MINIMALIST MAGIC</h1>
+      <div id="two-description">
+        <p class="info"></p>
+        <p class="info"></p>
+      </div>
     </div>
     <div id="page-warning"></div>
   </body>
