--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -17,9 +17,77 @@
     <div id="homepage">
       <h1 class="homepage-title">MINIMALIST MAGIC</h1>
       <div id="two-description">
-        <p class="info"></p>
-        <p class="info"></p>
+        <p class="info">
+          The show revolves around the activity of the Sebben & Sebben law firm,
+          which is staffed mainly by superheroes and other characters who had
+          originally been featured in 1960s-era Hanna-Barbera cartoons, most
+          notably Harvey Birdman (as the main character) and the Galaxy Trio.
+          The series' final episode aired on July 22, 2007. Harvey Birdman is a
+          fictional superhero/attorney at law who first appeared on the
+          Hanna-Barbera show Birdman and the Galaxy Trio as Ray Randall,
+          Birdman. After returning as guest host in Space Ghost Coast to Coast
+          as Harvey Birdman, he received a new spin-off solo series in Harvey
+          Birdman, Attorney at Law, depicting his legal career. The character
+          returned as United States Attorney General in Harvey Birdman: Attorney
+          General.
+        </p>
+        <p class="info">
+          The series centers on the surreal adventures and antics of three
+          anthropomorphic fast food items: Master Shake, a selfish,
+          self-contradictory, pathologically lying milkshake; Frylock, an
+          intelligent, usually logical, well-meaning box of French fries; and
+          Meatwad, a shapeshifting, childlike, somewhat simple-minded ball of
+          ground meat. Master Shake is the protagonist Aqua Teen Hunger Force.
+          Unlike his older brother Frylock who is an uptight super intelligent
+          box of french fries and his younger brother Meatwad who is known to be
+          a dimwitted yet lovable ball of meat, Shake is a rude, selfish,
+          idiotic and lazy (In earlier episodes, he believed he was the leader)
+          milkshake. Although he can do good things along with the other two.
+          That is, if he truly wants to.
+        </p>
       </div>
+    </div>
+    <div id="weird-page">
+      <h1 class="weird-title">DR. WEIRD</h1>
+      <div id="weird-container">
+        <p class="weird-info">
+          Dr. Weird is a supporting character and a main antagonist in the show
+          Aqua Teen Hunger Force. For the first two seasons of the show, he was
+          the subject of its cold openings. He rarely appears outside the cold
+          openings. Dr. Weird wears a purple and yellow robe, with a W-shaped
+          hole in the front. He also has a "hairarium" or hair heater around his
+          head. He has white hair that somewhat forms the shape of a W.
+          Reminiscent of super villains from the 1960s and 1970s, Dr. Weird
+          wears a domino mask that covers his eyes, which appear to be solid
+          red. He also wears gloves.
+        </p>
+        <img
+          id="weird-picture"
+          src="https://raw.githubusercontent.com/Lavertsss/Assets/main/Dr._Weird.webp"
+          height="auto"
+          width="auto"
+        />
+      </div>
+    </div>
+    <div id="newsletter-page">
+      <h1 id="newsletter-title">Breaking News</h1>
+      <p class="newsletter-content">
+        In the last 28-day period (24 July to 20 August 2023), nearly 1.5
+        million new COVID-19 cases and over 2000 deaths were reported from WHO’s
+        six regions, an increase of 63% and a decrease of 48%, respectively,
+        compared to the previous 28 days. As of 20 August 2023, over 769 million
+        confirmed cases and over 6.9 million deaths have been reported globally.
+        Three WHO regions reported increases in the number of cases, while two
+        regions reported decreases. While four WHO regions reported decreases in
+        the number of deaths, the East Mediterranean Region reported an increase
+        in deaths. In this WEU edition, we have included all available data from
+        the Region of the Americas since the start of the pandemic up to 6
+        August 2023 in the global figures. Currently, reported cases do not
+        accurately represent infection rates due to the reduction in testing and
+        reporting globally. During this 28-day period, 44% (103 of 234) of
+        countries reported at least one case to WHO – a proportion that has been
+        declining since mid-2022.
+      </p>
     </div>
     <div id="page-warning"></div>
   </body>
