--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -11,6 +11,7 @@
   <body>
     <div id="navigation-bar">
       <a href="" rel="noopener" class="navigation-items">Home</a>
+      <a href="" rel="noopener" class="navigation-items">Shop</a>
       <a href="" rel="noopener" class="navigation-items">Careers</a>
       <a href="" rel="noopener" class="navigation-items">Contact Us</a>
     </div>
@@ -71,23 +72,41 @@
     </div>
     <div id="newsletter-page">
       <h1 id="newsletter-title">Breaking News</h1>
-      <p class="newsletter-content">
-        In the last 28-day period (24 July to 20 August 2023), nearly 1.5
-        million new COVID-19 cases and over 2000 deaths were reported from WHO’s
-        six regions, an increase of 63% and a decrease of 48%, respectively,
-        compared to the previous 28 days. As of 20 August 2023, over 769 million
-        confirmed cases and over 6.9 million deaths have been reported globally.
-        Three WHO regions reported increases in the number of cases, while two
-        regions reported decreases. While four WHO regions reported decreases in
-        the number of deaths, the East Mediterranean Region reported an increase
-        in deaths. In this WEU edition, we have included all available data from
-        the Region of the Americas since the start of the pandemic up to 6
-        August 2023 in the global figures. Currently, reported cases do not
-        accurately represent infection rates due to the reduction in testing and
-        reporting globally. During this 28-day period, 44% (103 of 234) of
-        countries reported at least one case to WHO – a proportion that has been
-        declining since mid-2022.
-      </p>
+      <div id="news-container">
+        <div id="newsletter-topics">
+          <a class="newsletter-topics-nav" href="" rel="noopener">World</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">U.S.</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Business</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Science</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Health</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Books</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Magazine</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Arts</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Sports</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Travel</a>
+          <a class="newsletter-topics-nav" href="" rel="noopener">Opinion</a>
+        </div>
+        <p class="newsletter-content">
+          <i>
+            I>n the last 28-day period (24 July to 20 August 2023), nearly 1.5
+            million new COVID-19 cases and over 2000 deaths were reported from
+            WHO’s six regions, an increase of 63% and a decrease of 48%,
+            respectively, compared to the previous 28 days. As of 20 August
+            2023, over 769 million confirmed cases and over 6.9 million deaths
+            have been reported globally. Three WHO regions reported increases in
+            the number of cases, while two regions reported decreases. While
+            four WHO regions reported decreases in the number of deaths, the
+            East Mediterranean Region reported an increase in deaths. In this
+            WEU edition, we have included all available data from the Region of
+            the Americas since the start of the pandemic up to 6 August 2023 in
+            the global figures. Currently, reported cases do not accurately
+            represent infection rates due to the reduction in testing and
+            reporting globally. During this 28-day period, 44% (103 of 234) of
+            countries reported at least one case to WHO – a proportion that has
+            been declining since mid-2022.</i
+          >
+        </p>
+      </div>
     </div>
     <div id="page-warning"></div>
   </body>
