--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -72,40 +72,55 @@
     </div>
     <div id="newsletter-page">
       <h1 id="newsletter-title">Breaking News</h1>
-      <div id="news-container">
-        <div id="newsletter-topics">
-          <a class="newsletter-topics-nav" href="" rel="noopener">World</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">U.S.</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Business</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Science</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Health</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Books</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Magazine</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Arts</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Sports</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Travel</a>
-          <a class="newsletter-topics-nav" href="" rel="noopener">Opinion</a>
+      <div id="news-wrapper">
+        <div id="news-container">
+          <div id="newsletter-topics">
+            <a class="newsletter-topics-nav" href="" rel="noopener">World</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">U.S.</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Business</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Science</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Health</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Books</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Magazine</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Arts</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Sports</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Travel</a>
+            <a class="newsletter-topics-nav" href="" rel="noopener">Opinion</a>
+          </div>
+          <p class="newsletter-content">
+            <i>
+              In the last 28-day period (24 July to 20 August 2023), nearly 1.5
+              million new COVID-19 cases and over 2000 deaths were reported from
+              WHO’s six regions, an increase of 63% and a decrease of 48%,
+              respectively, compared to the previous 28 days. As of 20 August
+              2023, over 769 million confirmed cases and over 6.9 million deaths
+              have been reported globally. Three WHO regions reported increases
+              in the number of cases, while two regions reported decreases.
+              While four WHO regions reported decreases in the number of deaths,
+              the East Mediterranean Region reported an increase in deaths. In
+              this WEU edition, we have included all available data from the
+              Region of the Americas since the start of the pandemic up to 6
+              August 2023 in the global figures. Currently, reported cases do
+              not accurately represent infection rates due to the reduction in
+              testing and reporting globally. During this 28-day period, 44%
+              (103 of 234) of countries reported at least one case to WHO – a
+              proportion that has been declining since mid-2022.</i
+            >
+          </p>
         </div>
-        <p class="newsletter-content">
-          <i>
-            I>n the last 28-day period (24 July to 20 August 2023), nearly 1.5
-            million new COVID-19 cases and over 2000 deaths were reported from
-            WHO’s six regions, an increase of 63% and a decrease of 48%,
-            respectively, compared to the previous 28 days. As of 20 August
-            2023, over 769 million confirmed cases and over 6.9 million deaths
-            have been reported globally. Three WHO regions reported increases in
-            the number of cases, while two regions reported decreases. While
-            four WHO regions reported decreases in the number of deaths, the
-            East Mediterranean Region reported an increase in deaths. In this
-            WEU edition, we have included all available data from the Region of
-            the Americas since the start of the pandemic up to 6 August 2023 in
-            the global figures. Currently, reported cases do not accurately
-            represent infection rates due to the reduction in testing and
-            reporting globally. During this 28-day period, 44% (103 of 234) of
-            countries reported at least one case to WHO – a proportion that has
-            been declining since mid-2022.</i
+        <div id="sidebar">
+          <h1 class="related-topics-sidebar">Related Topics:</h1>
+          <a class="sidebar-item" href="" rel="noopener"
+            >Biden Administration Under...</a
           >
-        </p>
+          <a class="sidebar-item" href="" rel="noopener"
+            >Kamala Harris turns...</a
+          >
+          <a class="sidebar-item" href="" rel="noopener"
+            >Trump criticiez Abortion Ban...</a
+          >
+          <a class="sidebar-item" href="" rel="noopener">asdadasdasd</a>
+        </div>
       </div>
     </div>
     <div id="page-warning"></div>
