--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -104,22 +104,43 @@
               not accurately represent infection rates due to the reduction in
               testing and reporting globally. During this 28-day period, 44%
               (103 of 234) of countries reported at least one case to WHO – a
-              proportion that has been declining since mid-2022.</i
+              proportion that has been declining since mid-2022. In case you
+              couldn't make up yourr mind, yes, COVID-19 is still dangerous.
+              Please keep yourself safe by applying hand sanitizer or trying to
+              wash your hands a maximum every 3 hours.</i
             >
           </p>
         </div>
         <div id="sidebar">
           <h1 class="related-topics-sidebar">Related Topics:</h1>
           <a class="sidebar-item" href="" rel="noopener"
-            >Biden Administration Under...</a
+            >Biden Administration Under Investigat...</a
           >
+          <img
+            class="sidebar-picture"
+            src="https://raw.githubusercontent.com/Lavertsss/Assets/main/biden.webp"
+            height="auto"
+            width="auto"
+          />
           <a class="sidebar-item" href="" rel="noopener"
             >Kamala Harris turns...</a
           >
+
+          <a class="sidebar-item" href="" rel="noopener"
+            >2 Charged with Murder in Day Care...</a
+          >
+          <img
+            class="sidebar-picture"
+            src="https://raw.githubusercontent.com/Lavertsss/Assets/main/17ny-daycare-1-lqwz-threeByTwoSmallAt2X.webp"
+            height="auto"
+            width="auto"
+          />
           <a class="sidebar-item" href="" rel="noopener"
             >Trump criticiez Abortion Ban...</a
           >
-          <a class="sidebar-item" href="" rel="noopener">asdadasdasd</a>
+          <a class="sidebar-item" href="" rel="noopener"
+            >Climate Protesters Around the World...</a
+          >
         </div>
       </div>
     </div>
