--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -49,7 +49,12 @@
       </div>
     </div>
     <div id="weird-page">
-      <h1 class="weird-title">DR. WEIRD</h1>
+      <div id="weird-title-container">
+        <h1 class="weird-title">
+          DR. WEIR
+          <h1 class="weird-title-d">D</h1>
+        </h1>
+      </div>
       <div id="weird-container">
         <p class="weird-info">
           Dr. Weird is a supporting character and a main antagonist in the show
@@ -89,25 +94,35 @@
           </div>
           <p class="newsletter-content">
             <i>
-              In the last 28-day period (24 July to 20 August 2023), nearly 1.5
-              million new COVID-19 cases and over 2000 deaths were reported from
-              WHO’s six regions, an increase of 63% and a decrease of 48%,
-              respectively, compared to the previous 28 days. As of 20 August
-              2023, over 769 million confirmed cases and over 6.9 million deaths
-              have been reported globally. Three WHO regions reported increases
-              in the number of cases, while two regions reported decreases.
-              While four WHO regions reported decreases in the number of deaths,
-              the East Mediterranean Region reported an increase in deaths. In
-              this WEU edition, we have included all available data from the
-              Region of the Americas since the start of the pandemic up to 6
-              August 2023 in the global figures. Currently, reported cases do
-              not accurately represent infection rates due to the reduction in
-              testing and reporting globally. During this 28-day period, 44%
-              (103 of 234) of countries reported at least one case to WHO – a
-              proportion that has been declining since mid-2022. In case you
-              couldn't make up yourr mind, yes, COVID-19 is still dangerous.
-              Please keep yourself safe by applying hand sanitizer or trying to
-              wash your hands a maximum every 3 hours.</i
+              &emsp;&emsp; In the last 28-day period (24 July to 20 August
+              2023), nearly 1.5 million new COVID-19 cases and over 2000 deaths
+              were reported from WHO’s six regions, an increase of 63% and a
+              decrease of 48%, respectively, compared to the previous 28 days.
+              As of 20 August 2023, over 769 million confirmed cases and over
+              6.9 million deaths have been reported globally. Three WHO regions
+              reported increases in the number of cases, while two regions
+              reported decreases. While four WHO regions reported decreases in
+              the number of deaths, the East Mediterranean Region reported an
+              increase in deaths. In this WEU edition, we have included all
+              available data from the Region of the Americas since the start of
+              the pandemic up to 6 August 2023 in the global figures. Currently,
+              reported cases do not accurately represent infection rates due to
+              the reduction in testing and reporting globally. During this
+              28-day period, 44% (103 of 234) of countries reported at least one
+              case to WHO, a proportion that has been declining since mid-2022.
+              In case you couldn't make up yourr mind, yes, COVID-19 is still
+              dangerous. Please keep yourself safe by applying hand sanitizer or
+              trying to wash your hands a maximum every 3 hours. <br />
+              &emsp;&emsp; Please note that this is the last edition of the
+              COVID-19 Weekly Epidemiological Update. Moving forward, as WHO
+              transitions its COVID-19 surveillance from an emergency response
+              to long-term COVID-19 disease prevention, control and management,
+              we will be providing updates every four-weeks, with the next
+              edition set to be published on 28 September 2023. Disaggregated
+              data will still be accessible on the WHO COVID-19 dashboard, where
+              the full dataset is available for download. WHO has also recently
+              updated COVID-19 surveillance reporting requirements for Member
+              States, which can be found here.</i
             >
           </p>
         </div>
