--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Client Website</title>
+    <title>Template Website</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <link rel="icon" type="image/x-icon" href="" />
@@ -112,8 +112,8 @@
               case to WHO, a proportion that has been declining since mid-2022.
               In case you couldn't make up yourr mind, yes, COVID-19 is still
               dangerous. Please keep yourself safe by applying hand sanitizer or
-              trying to wash your hands a maximum every 3 hours. <br />
-              &emsp;&emsp; Please note that this is the last edition of the
+              trying to wash your hands a maximum every 3 hours. <br /><br />
+              \n &emsp;&emsp; Please note that this is the last edition of the
               COVID-19 Weekly Epidemiological Update. Moving forward, as WHO
               transitions its COVID-19 surveillance from an emergency response
               to long-term COVID-19 disease prevention, control and management,
@@ -159,6 +159,11 @@
         </div>
       </div>
     </div>
-    <div id="page-warning"></div>
+    <div id="picturesque">
+      <div id="options-container">
+        <div id="picture-option-1"><a class="option-1-text">OPTION 1</a></div>
+        <div id="picture-option-2"><a class="option-2-text">OPTION 2</a></div>
+      </div>
+    </div>
   </body>
 </html>
