Cancelling Picturesque Idea

--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -113,7 +113,7 @@
               In case you couldn't make up yourr mind, yes, COVID-19 is still
               dangerous. Please keep yourself safe by applying hand sanitizer or
               trying to wash your hands a maximum every 3 hours. <br /><br />
-              \n &emsp;&emsp; Please note that this is the last edition of the
+              &emsp;&emsp; Please note that this is the last edition of the
               COVID-19 Weekly Epidemiological Update. Moving forward, as WHO
               transitions its COVID-19 surveillance from an emergency response
               to long-term COVID-19 disease prevention, control and management,
@@ -159,11 +159,41 @@
         </div>
       </div>
     </div>
-    <div id="picturesque">
+    <!-- <div id="picturesque">
       <div id="options-container">
-        <div id="picture-option-1"><a class="option-1-text">OPTION 1</a></div>
-        <div id="picture-option-2"><a class="option-2-text">OPTION 2</a></div>
+        <div id="picture-option-1">
+          <a class="option-1-text" href="" rel="noopener">SHOP</a>
+          <div id="option-explanation-div">
+            <p class="option-explanation">
+              "Welcome to our professional 'Shopping' portal, meticulously
+              designed to provide a seamless and sophisticated shopping
+              experience. By selecting the 'Shop' tab, you gain access to an
+              extensive array of premium products curated to meet your exacting
+              standards. From high-end fashion to state-of-the-art electronics,
+              our distinguished selection epitomizes quality and style. Immerse
+              yourself in the world of luxury, discover exclusive offers, and
+              indulge in the convenience of upscale online shopping—all at your
+              fingertips."
+            </p>
+          </div>
+        </div>
+        <div id="picture-option-2">
+          <a class="option-2-text" href="" rel="noopener">CONTACT</a>
+          <div id="option-explanation-div">
+            <p class="option-explanation">
+              "Welcome to our professional 'Shopping' portal, meticulously
+              designed to provide a seamless and sophisticated shopping
+              experience. By selecting the 'Shop' tab, you gain access to an
+              extensive array of premium products curated to meet your exacting
+              standards. From high-end fashion to state-of-the-art electronics,
+              our distinguished selection epitomizes quality and style. Immerse
+              yourself in the world of luxury, discover exclusive offers, and
+              indulge in the convenience of upscale online shopping—all at your
+              fingertips."
+            </p>
+          </div>
+        </div>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
