--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -159,7 +159,35 @@
         </div>
       </div>
     </div>
-    <!-- <div id="picturesque">
+    <div id="magazine-page">
+      <div id="magazine-title-wrapper">
+        <h1 class="magazine-title">WEEKLY</h1>
+      </div>
+      <div id="magazine-text-wrapper">
+        <p class="magazine-subtitle">HAS NE-YO FALLEN OFF?</p>
+        <p class="magazine-subtitle-text">
+          IT APPEARS THAT POPULAR 2010'S POP SINGER "NE-YO GOT INTO AN
+          ALTERCATION WITH A COWORKER THIS MONDAY AFTERNOON, WHICH LATER,
+          ABRUPTED INTO A FIST FIGHT.
+        </p>
+      </div>
+      <div id="magazine-text-wrapper">
+        <p class="magazine-subtitle">A QUOTE FROM NE-YO AT THE SCENE:</p>
+        <p class="magazine-subtitle-text">
+          "I'M TRYING TO ESCAPE THE SHACKLES OF A PEN AND A PAD. I'VE SAT IN
+          SESSIONS WITH JAY-Z WHERE HE DOESN'T WRITE ANYTHING DOWN. HE'LL COME
+          UP WITH THE MOST INCREDIBLE TRIPLE ENTENDRE, ALL IN HIS HEAD - IT'S
+          AMAZING."
+        </p>
+      </div>
+      <div id="footer-section"><p>ASDASDASDASDAS</p></div>
+
+      <img src="" height="auto" width="auto" />
+    </div>
+  </body>
+</html>
+
+<!-- <div id="picturesque">
       <div id="options-container">
         <div id="picture-option-1">
           <a class="option-1-text" href="" rel="noopener">SHOP</a>
@@ -195,5 +223,3 @@
         </div>
       </div>
     </div> -->
-  </body>
-</html>
