Reformatting font size success

--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -180,7 +180,20 @@
           AMAZING."
         </p>
       </div>
-      <div id="footer-section"><p>ASDASDASDASDAS</p></div>
+      <div id="footer-section">
+        <p class="footer-text"><i>
+          "SHAFFER CHIMERE SMITH (BORN OCTOBER 18, 1979), KNOWN PROFESSIONALLY AS
+          NE-YO, IS AN AMERICAN R&B SINGER, SONGWRITER, ACTOR, DANCER, AND
+          RECORD PRODUCER. HE GAINED RECOGNITION FOR HIS SONGWRITING ABILITIES
+          WHEN HE WROTE MARIO'S 2004 HIT "LET ME LOVE YOU". THE SINGLE'S
+          SUCCESSFUL RELEASE PROMPTED A MEETING BETWEEN NE-YO AND DEF JAM'S
+          THEN-PRESIDENT JAY-Z, RESULTING IN A CONTRACT IN WHICH HE RECORDED
+          FOUR SUCCESSFUL STUDIO ALBUMS AND NUMEROUS HIT SONGS FOR THE LABEL.
+          NE-YO BECAME DISTINCTIVE FOR HIS TENOR VOCAL RANGE, SHARP PERFORMING
+          IMAGE AND ATTIRE, AND DIVERSE ARTISTRY. HE IS A RECIPIENT OF SEVERAL
+          AWARDS INCLUDING THREE GRAMMY AWARDS." 
+        </p></i>
+      </div>
 
       <img src="" height="auto" width="auto" />
     </div>
