--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -160,6 +160,7 @@
       </div>
     </div>
     <div id="magazine-page">
+      <img id="magazine-main-image" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/neyo-new-album-960x608%20(1).png" height="auto" width="auto" />
       <div id="magazine-title-wrapper">
         <h1 class="magazine-title">WEEKLY</h1>
       </div>
@@ -194,8 +195,6 @@
           AWARDS INCLUDING THREE GRAMMY AWARDS." 
         </p></i>
       </div>
-
-      <img src="" height="auto" width="auto" />
     </div>
   </body>
 </html>
