Starting bottom title

--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -170,7 +170,19 @@
           IT APPEARS THAT POPULAR 2010'S POP SINGER "NE-YO GOT INTO AN
           ALTERCATION WITH A COWORKER THIS MONDAY AFTERNOON, WHICH LATER,
           ABRUPTED INTO A FIST FIGHT.
+          IT APPEARS THAT POPULAR 2010'S POP SINGER "NE-YO GOT INTO AN
+          ALTERCATION WITH A COWORKER THIS MONDAY AFTERNOON, WHICH LATER,
+          ABRUPTED INTO A FIST FIGHT.
         </p>
+      </div>
+      <div id="magazine-text-wrapper-right">
+        <p class="magazine-subtitle">NEYO HAS A FUTURE IN TV?</p>
+        <p class="magazine-subtitle-text">
+          IN 2011, NE-YO WAS APPROACHED BY CARTOON NETWORK TO HELP CREATE AN ANIMATED SERIES. NE-YO ANNOUNCED THAT THE SHOW WOULD BE TITLED I HEART TUESDAY AND THAT HE HAD CREATED IT FOR HIS SISTER.
+        </p>
+      </div>
+      <div id="magazine-text-wrapper-opaque-right">
+        <p class="magazine-subtitle">DON'T MISS IT LIVE ON TMZ @ 8PM EST.</p>
       </div>
       <div id="magazine-text-wrapper">
         <p class="magazine-subtitle">A QUOTE FROM NE-YO AT THE SCENE:</p>
@@ -178,9 +190,12 @@
           "I'M TRYING TO ESCAPE THE SHACKLES OF A PEN AND A PAD. I'VE SAT IN
           SESSIONS WITH JAY-Z WHERE HE DOESN'T WRITE ANYTHING DOWN. HE'LL COME
           UP WITH THE MOST INCREDIBLE TRIPLE ENTENDRE, ALL IN HIS HEAD - IT'S
-          AMAZING."
+          AMAZING. I'M TRYING TO ESCAPE THE SHACKLES OF A PEN AND A PAD."
         </p>
       </div>
+      <!-- <div id="magazine-text-wrapper-opaque">
+        <p class="magazine-subtitle">DON'T MISS IT LIVE ON TMZ @ 8PM EST.</p>
+      </div> -->
       <div id="footer-section">
         <p class="footer-text"><i>
           "SHAFFER CHIMERE SMITH (BORN OCTOBER 18, 1979), KNOWN PROFESSIONALLY AS
@@ -189,9 +204,7 @@
           WHEN HE WROTE MARIO'S 2004 HIT "LET ME LOVE YOU". THE SINGLE'S
           SUCCESSFUL RELEASE PROMPTED A MEETING BETWEEN NE-YO AND DEF JAM'S
           THEN-PRESIDENT JAY-Z, RESULTING IN A CONTRACT IN WHICH HE RECORDED
-          FOUR SUCCESSFUL STUDIO ALBUMS AND NUMEROUS HIT SONGS FOR THE LABEL.
-          NE-YO BECAME DISTINCTIVE FOR HIS TENOR VOCAL RANGE, SHARP PERFORMING
-          IMAGE AND ATTIRE, AND DIVERSE ARTISTRY. HE IS A RECIPIENT OF SEVERAL
+          FOUR SUCCESSFUL STUDIO ALBUMS AND NUMEROUS HIT SONGS FOR THE LABEL. HE IS A RECIPIENT OF SEVERAL
           AWARDS INCLUDING THREE GRAMMY AWARDS." 
         </p></i>
       </div>
