--- a/First Proffessional/index.html
+++ b/First Proffessional/index.html
@@ -160,7 +160,14 @@
       </div>
     </div>
     <div id="magazine-page">
-      <img id="magazine-main-image" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/neyo-new-album-960x608%20(1).png" height="auto" width="auto" />
+      <div id="magazine-image-overlay">
+        <img
+          id="magazine-main-image"
+          src="https://raw.githubusercontent.com/Lavertsss/Assets/main/neyo-finished-transformed.png"
+          height="auto"
+          width="auto"
+        />
+      </div>
       <div id="magazine-title-wrapper">
         <h1 class="magazine-title">WEEKLY</h1>
       </div>
@@ -169,16 +176,17 @@
         <p class="magazine-subtitle-text">
           IT APPEARS THAT POPULAR 2010'S POP SINGER "NE-YO GOT INTO AN
           ALTERCATION WITH A COWORKER THIS MONDAY AFTERNOON, WHICH LATER,
-          ABRUPTED INTO A FIST FIGHT.
-          IT APPEARS THAT POPULAR 2010'S POP SINGER "NE-YO GOT INTO AN
-          ALTERCATION WITH A COWORKER THIS MONDAY AFTERNOON, WHICH LATER,
-          ABRUPTED INTO A FIST FIGHT.
+          ABRUPTED INTO A FIST FIGHT. IT APPEARS THAT POPULAR 2010'S POP SINGER
+          "NE-YO GOT INTO AN ALTERCATION WITH A COWORKER THIS MONDAY AFTERNOON,
+          WHICH LATER, ABRUPTED INTO A FIST FIGHT.
         </p>
       </div>
       <div id="magazine-text-wrapper-right">
         <p class="magazine-subtitle">NEYO HAS A FUTURE IN TV?</p>
         <p class="magazine-subtitle-text">
-          IN 2011, NE-YO WAS APPROACHED BY CARTOON NETWORK TO HELP CREATE AN ANIMATED SERIES. NE-YO ANNOUNCED THAT THE SHOW WOULD BE TITLED I HEART TUESDAY AND THAT HE HAD CREATED IT FOR HIS SISTER.
+          IN 2011, NE-YO WAS APPROACHED BY CARTOON NETWORK TO HELP CREATE AN
+          ANIMATED SERIES. NE-YO ANNOUNCED THAT THE SHOW WOULD BE TITLED I HEART
+          TUESDAY AND THAT HE HAD CREATED IT FOR HIS SISTER.
         </p>
       </div>
       <div id="magazine-text-wrapper-opaque-right">
@@ -193,20 +201,28 @@
           AMAZING. I'M TRYING TO ESCAPE THE SHACKLES OF A PEN AND A PAD."
         </p>
       </div>
-      <!-- <div id="magazine-text-wrapper-opaque">
-        <p class="magazine-subtitle">DON'T MISS IT LIVE ON TMZ @ 8PM EST.</p>
-      </div> -->
+      <div id="magazine-title-wrapper">
+        <h1 class="magazine-bottom-title">THE CONTROVERSY SURROUNDING:</h1>
+        <h1 class="magazine-bottom-subtitle">SHAFFER "NE-YO" SMITH</h1>
+      </div>
+      <div id="magazine-text-wrapper-opaque">
+        <p class="magazine-subtitle">RREAD MORE ON HIS WIFE'S THOUGHTS.</p>
+      </div>
+      <div id="barcode-image-container">
+        <img
+          id="barcode-image"
+          src="https://raw.githubusercontent.com/Lavertsss/Assets/main/barcode-on-white-background-illustration-vector.jpg"
+          height="auto"
+          width="auto"
+        />
+      </div>
       <div id="footer-section">
         <p class="footer-text"><i>
-          "SHAFFER CHIMERE SMITH (BORN OCTOBER 18, 1979), KNOWN PROFESSIONALLY AS
-          NE-YO, IS AN AMERICAN R&B SINGER, SONGWRITER, ACTOR, DANCER, AND
-          RECORD PRODUCER. HE GAINED RECOGNITION FOR HIS SONGWRITING ABILITIES
-          WHEN HE WROTE MARIO'S 2004 HIT "LET ME LOVE YOU". THE SINGLE'S
-          SUCCESSFUL RELEASE PROMPTED A MEETING BETWEEN NE-YO AND DEF JAM'S
-          THEN-PRESIDENT JAY-Z, RESULTING IN A CONTRACT IN WHICH HE RECORDED
-          FOUR SUCCESSFUL STUDIO ALBUMS AND NUMEROUS HIT SONGS FOR THE LABEL. HE IS A RECIPIENT OF SEVERAL
-          AWARDS INCLUDING THREE GRAMMY AWARDS." 
+          @Lavertsss
         </p></i>
+        <p class="footer-text"><i>
+          mindlessmuseum.com
+                  </p></i>
       </div>
     </div>
   </body>
