--- a/Black-White/index.html
+++ b/Black-White/index.html
@@ -16,11 +16,16 @@
       <div id="title-wrapper">
         <h1 class="title">Welcome</h1>
       </div>
-      <div id="scroll-wrapper">
-        <p class="scroll-item">Shop</p>
-        <p class="scroll-item">Options</p>
-        <p class="scroll-item">Contact</p>
-        <p class="scroll-item">Location</p>
+      <div id="scroll-placer">
+        <div id="scroll-container">
+          <div id="scroll-wrapper">
+            <p class="scroll-item">Shop</p>
+            <p class="scroll-item">Options</p>
+            <p class="scroll-item">Contact</p>
+            <p class="scroll-item">Location</p>
+            <p class="scroll-item">Careers</p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
