--- a/J & J/index.html
+++ b/J & J/index.html
@@ -9,12 +9,55 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter&family=Work+Sans:wght@800&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <nav>
+    <section class="section-1">
+      <nav>
+        <div id="nav-wrapper">
+          <div class="nav-container nav-left">
+            <a class="nav-items title" href=""
+              ><span class="title-color">Mindless </span>Museum</a
+            >
+            <a class="nav-items" href="">Projects</a>
+          </div>
+
+          <div class="nav-container nav-right">
+            <a class="nav-items" href="">Contact</a>
+            <a class="nav-items consultation" href="">Consultation</a>
+          </div>
+        </div>
+      </nav>
+
+      <main>
+        <div id="homepage">
+          <div class="header">
+            <h1 class="header-title">Where Imagination Meets Innovation</h1>
+            <p class="header-text">lorem ipsun do me asdas asdasd</p>
+          </div>
+        </div>
+        <div class="custom-border">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <path
+              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+              class="shape-fill"
+            ></path>
+          </svg>
+        </div>
+      </main>
+    </section>
+    <section class="section-2"></section>
+  </body>
+</html>
+
+<!-- <nav>
       <div id="navigation-wrapper">
         <div class="navigation-container">
           <a class="navigation-items">Order</a>
@@ -23,6 +66,4 @@
           <a class="navigation-items">Contact</a>
         </div>
       </div>
-    </nav>
-  </body>
-</html>
+    </nav> -->
