--- a/J & J/index.html
+++ b/J & J/index.html
@@ -35,8 +35,16 @@
         <div id="homepage">
           <div class="header">
             <h1 class="header-title">Where Imagination Meets Innovation</h1>
-            <p class="header-text">lorem ipsun do me asdas asdasd</p>
-          </div>
+            <p class="header-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div> <div class="header-gif"><i>(Placeholder)</i></div>
         </div>
         <div class="custom-border">
           <svg
@@ -49,21 +57,12 @@
               d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
               class="shape-fill"
             ></path>
+            <!--<path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path> -->
           </svg>
-        </div>
-      </main>
-    </section>
-    <section class="section-2"></section>
+        </div>    
+      </section>
+    <section class="section-2"><div class="introductions"><h1 class="header-title ">Introductions</h1></div></section>
+    </main>
   </body>
 </html>
-
-<!-- <nav>
-      <div id="navigation-wrapper">
-        <div class="navigation-container">
-          <a class="navigation-items">Order</a>
-          <a class="navigation-items">Menu</a>
-          <a class="navigation-items">Careers</a>
-          <a class="navigation-items">Contact</a>
-        </div>
-      </div>
-    </nav> -->
+<!-- 🠟 -->
