mobile + opacity playstate forward

--- a/J & J/index.html
+++ b/J & J/index.html
@@ -61,7 +61,13 @@
           </svg>
         </div>    
       </section>
-    <section class="section-2"><div class="introductions"><h1 class="header-title ">Introductions</h1></div></section>
+    <section class="section-2">
+      <div class="introductions">
+        <div class="intro-transition">
+          <h1 class="header-title ">Introductions</h1>
+        </div>
+      </div>
+    </section>
     </main>
   </body>
 </html>
