--- a/J & J/index.html
+++ b/J & J/index.html
@@ -44,7 +44,9 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-          </div> <div class="header-gif"><i>(Placeholder)</i></div>
+          </div> 
+          <div class="header-gif">
+            <iframe width="800" height="450" src="https://www.youtube-nocookie.com/embed/QYSk1aN_6WY?si=WS3twR1r96hqSQXQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>          </div>
         </div>
         <div class="custom-border">
           <svg
