--- a/J & J/index.html
+++ b/J & J/index.html
@@ -6,12 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Work+Sans:wght@800&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&display=swap" rel="stylesheet">
+    
   </head>
   <body>
     <section class="section-1">
@@ -46,7 +44,7 @@
             </p>
           </div> 
           <div class="header-gif">
-            <iframe width="800" height="450" src="https://www.youtube-nocookie.com/embed/QYSk1aN_6WY?si=WS3twR1r96hqSQXQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>          </div>
+            <iframe width="700" height="400" src="https://www.youtube-nocookie.com/embed/QYSk1aN_6WY?si=WS3twR1r96hqSQXQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ></iframe>          </div>
         </div>
         <div class="custom-border">
           <svg
