--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -67,10 +67,11 @@
           >scroll
         </p>
       </div>
-      <!-- <div class="section-2">
+
+      <div class="section-2">
         <div class="section-wrapper box">
-           <h1 class="title black">YNW Melly</h1>
-   </div> -->
+           <h1 class="title black">Projects</h1>
+   </div>
     </div>
   </body>
 </html>
