--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -71,7 +71,18 @@
       <div class="section-2">
         <div class="section-wrapper box">
            <h1 class="title black">Projects</h1>
-   </div>
+
+           <div class="project-flex">
+            <div class="project-frame shadow"></div>
+            <div class="project-frame shadow"></div>
+            <div class="project-frame shadow"></div>
+            </div>
+            <div class="project-flex">
+            <div class="project-frame shadow"></div>
+            <div class="project-frame shadow"></div>
+            <div class="project-frame shadow"></div>
+          </div>
+      </div>
     </div>
   </body>
 </html>
