--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,88 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joseph Maddox</title>
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="script.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Joseph Maddox</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="script.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
+    rel="stylesheet" />
 
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
-  </head>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-  <body>
-    <div id="page-container">
-      <nav>
-        <div class="navigation-bar box">
-          <a class="navigation-items" href="">Projects</a>
-          <a class="navigation-items" href="">About</a>
-          <a class="navigation-items" href="">Contact</a>
-        </div>
-      </nav>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+</head>
 
-      <div class="section-1 box">
-        <div class="section-wrapper">
-          <p class="title">Hi, I'm Joseph Maddox</p>
-          <div class="subtitle-flex">
-            <p class="subtitle">Junior Front-End Devoloper</p>
-            <p class="subtitle">
-              <span class="material-symbols-outlined bob">location_on</span
-              >Snellville, GA
-            </p>
-          </div>
+<body>
+  <div id="page-container">
+    <nav>
+      <div class="navigation-bar box">
+        <a class="navigation-items" rel="noopener" href="#project-link">Projects</a>
+        <a class="navigation-items" rel="noopener" href="#about-link">About</a>
+        <a class="navigation-items" href="">Contact</a>
+      </div>
+    </nav>
 
-          <div class="body-flex">
-            <p class="body">
-              Below, you can learn more about me, check out my projects, and see
-              the tools I use. Got any questions or want to chat about a
-              project? Feel free to drop me a message using the contact form
-              below.
-            </p>
-          </div>
+    <div class="section-1 box">
+      <div class="section-wrapper">
+        <p class="title">Hi, I'm Joseph Maddox</p>
+        <div class="subtitle-flex">
+          <p class="subtitle">Junior Front-End Devoloper</p>
+          <p class="subtitle">
+            <span class="material-symbols-outlined bob">location_on</span>Snellville, GA
+          </p>
         </div>
 
-        <div class="section-wrapper">
-          <div id="blob">
-            <script src="lottie.js"></script>
-          </div>
+        <div class="body-flex">
+          <p class="body">
+            Below, you can learn more about me, check out my projects, and see
+            the tools I use. Got any questions or want to chat about a
+            project? Feel free to drop me a message using the contact form
+            below.
+          </p>
         </div>
-
-        <p class="scroll bob">
-          <span class="material-symbols-outlined">
-            keyboard_double_arrow_left </span
-          >scroll
-        </p>
       </div>
 
-      <div class="section-2">
-        <div class="section-wrapper box">
-           <h1 class="title black">Projects</h1>
+      <div class="section-wrapper">
+        <div id="blob">
+          <script src="lottie.js"></script>
+        </div>
+      </div>
 
-           <div class="project-flex">
-            <div class="project-frame shadow"></div>
-            <div class="project-frame shadow"></div>
-            <div class="project-frame shadow"></div>
+      <p class="scroll bob">
+        <span class="material-symbols-outlined">
+          keyboard_double_arrow_left </span>scroll
+      </p>
+    </div>
+
+    <a id="project-link"></a>
+
+    <div class="section-2 box no-tbp">
+      <div class="light-bar"></div>
+      <div class="section-wrapper">
+        <h1 class="title black">Projects</h1>
+        <img class="fly" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/Fly.png" />
+
+        <div class="project-flex">
+          <div class="project-frame shadow">
+            <div class="frame-format">
+              <div class="frame-img"></div>
+              <p class="frame-caption">Notes</p>
             </div>
-            <div class="project-flex">
-            <div class="project-frame shadow"></div>
-            <div class="project-frame shadow"></div>
-            <div class="project-frame shadow"></div>
           </div>
+
+          <div class="project-frame shadow">
+            <div class="frame-format">
+              <div class="frame-img"></div>
+              <p class="frame-caption">(Placeholder)</p>
+            </div>
+          </div>
+
+          <div class="project-frame shadow">
+            <div class="frame-format">
+              <div class="frame-img"></div>
+              <p class="frame-caption">(Placeholder)</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-flex">
+          <div class="project-frame shadow">
+            <div class="frame-format">
+              <div class="frame-img"></div>
+              <p class="frame-caption">(Placeholder)</p>
+            </div>
+          </div>
+
+          <div class="project-frame shadow">
+            <div class="frame-format">
+              <div class="frame-img"></div>
+              <p class="frame-caption">(Placeholder)</p>
+            </div>
+          </div>
+
+          <div class="project-frame shadow">
+            <div class="frame-format">
+              <div class="frame-img"></div>
+              <p class="frame-caption">(Placeholder)</p>
+            </div>
+          </div>
+        </div>
+
+        <a id="about-link"></a>
       </div>
     </div>
-  </body>
+</body>
+
 </html>
