--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -23,18 +23,21 @@
 <body>
   <div id="page-container">
     <nav>
-      <div class="navigation-bar box">
+      <div class="nav-wrapper">
+      <div class="navigation-bar box flex-start"> <a class="navigation-name accent" rel="noopener"
+          href="#project-link">JosephMaddox.dev</a></div>
+      <div class="navigation-bar box flex-end">
         <a class="navigation-items" rel="noopener" href="#project-link">Projects</a>
         <a class="navigation-items" rel="noopener" href="#about-link">About</a>
         <a class="navigation-items" href="">Contact</a>
-      </div>
+      </div></div>
     </nav>
 
     <div class="section-1 box">
       <div class="section-wrapper">
         <p class="title">Hi, I'm Joseph Maddox</p>
         <div class="subtitle-flex">
-          <p class="subtitle">Junior Front-End Devoloper</p>
+          <p class="subtitle" style="color:rgb(255, 137, 46);">Junior Front-End Devoloper</p>
           <p class="subtitle">
             <span class="material-symbols-outlined bob">location_on</span>Snellville, GA
           </p>
@@ -43,72 +46,54 @@
         <div class="body-flex">
           <p class="body">
             Below, you can learn more about me, check out my projects, and see
-            the tools I use. Got any questions or want to chat about a
+            the tools I use. Have any questions or want to chat about a
             project? Feel free to drop me a message using the contact form
             below.
           </p>
         </div>
       </div>
 
-      <div class="section-wrapper">
+      <div class="section-image-wrapper">
         <div id="blob">
-          <script src="lottie.js"></script>
+          <!-- <script src="lottie.js"></script> -->
         </div>
+        <p class="center-text">HOVER FOR TEXT</p>
       </div>
 
-      <p class="scroll bob">
+      <!-- <p class="scroll bob">
         <span class="material-symbols-outlined">
           keyboard_double_arrow_left </span>scroll
-      </p>
+      </p> -->
     </div>
 
     <a id="project-link"></a>
 
     <div class="section-2 box no-tbp">
-      <div class="light-bar"></div>
-      <div class="section-wrapper">
-        <h1 class="title black">Projects</h1>
-        <img class="fly" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/Fly.png" />
+      <!-- <div class="light-bar"></div>
+      <img class="fly" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/Fly.png" /> -->
+      <div class="project-wrapper">
+
 
         <div class="project-flex">
-          <div class="project-frame shadow">
+          <h1 class="project-header" style="color:rgb(255, 137, 46);">Project 1</h1>
+          <p class="project-subheader">Personal Notes Page</p>
+          <div class="project-frame">
             <div class="frame-format">
               <div class="frame-img"></div>
               <p class="frame-caption">Notes</p>
             </div>
           </div>
 
-          <div class="project-frame shadow">
+          <h1 class="title flex-end" style="color:rgb(255, 137, 46);">Project 2</h1>
+          <div class="project-frame">
             <div class="frame-format">
-              <div class="frame-img"></div>
+              <img class="frame-img" href="Practice-Projects\Portfolio\pictures\jsnotes.png"/>
               <p class="frame-caption">(Placeholder)</p>
             </div>
           </div>
 
-          <div class="project-frame shadow">
-            <div class="frame-format">
-              <div class="frame-img"></div>
-              <p class="frame-caption">(Placeholder)</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="project-flex">
-          <div class="project-frame shadow">
-            <div class="frame-format">
-              <div class="frame-img"></div>
-              <p class="frame-caption">(Placeholder)</p>
-            </div>
-          </div>
-
-          <div class="project-frame shadow">
-            <div class="frame-format">
-              <div class="frame-img"></div>
-              <p class="frame-caption">(Placeholder)</p>
-            </div>
-          </div>
-
-          <div class="project-frame shadow">
+          <h1 class="title flex-end" style="color:rgb(255, 137, 46);">Project 3</h1>
+          <div class="project-frame">
             <div class="frame-format">
               <div class="frame-img"></div>
               <p class="frame-caption">(Placeholder)</p>
