--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -29,10 +29,7 @@
       <nav>
         <div class="nav-wrapper">
           <div class="navigation-bar box flex-start">
-            <a
-              class="navigation-name accent"
-              rel="noopener"
-              href="#project-link"
+            <a class="navigation-name accent" rel="noopener" href=""
               >JosephMaddox.dev</a
             >
           </div>
@@ -86,9 +83,8 @@
 
       <div class="section-divider"></div>
 
-      <a id="project-link"></a>
-
       <div class="section-2 box no-tbp">
+        <a id="project-link"></a>
         <!-- <div class="light-bar"></div>
       <img class="fly" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/Fly.png" /> -->
         <div class="project-wrapper">
@@ -164,6 +160,7 @@
           </div>
 
           <div class="section-divider"></div>
+          <a id="about-link"></a>
         </div>
       </div>
     </div>
