--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -163,6 +163,30 @@
           <a id="about-link"></a>
         </div>
       </div>
+
+      <div class="section-3 box no-tbp">
+        <div class="about-wrapper">
+          <h1 class="title center-text" style="color: rgb(255, 137, 46)">
+            About Me
+          </h1>
+          <p class="about-text">
+            <!-- My name is Joseph Maddox, presently a self-taught web developer. I'm
+            currently in college for my bachelor's in Computer Science with a
+            major in Information Technology. I am sickly obsessed with [adult
+            swim] content. -->
+            I'm Joseph Maddox, a dedicated web developer currently pursuing a
+            Bachelor's in Computer Science with a focus on Information
+            Technology. Passionate about crafting digital experiences, I thrive
+            in the world of coding and creativity. Beyond the realms of
+            technology, I find immense inspiration in the unconventional
+            storytelling and avant-garde animation of [adult swim]. This passion
+            fuels my innovative approach to web development, where I merge
+            technical expertise with a flair for the imaginative. Welcome to my
+            portfolio—where technical precision meets the boundless realms of
+            creative exploration.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
