--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -30,7 +30,7 @@
         <div class="nav-wrapper">
           <div class="navigation-bar box flex-start">
             <a class="navigation-name accent" rel="noopener" href=""
-              >JosephMaddox.dev</a
+              >JosephMaddox<span class="accent-static">.</span>dev</a
             >
           </div>
           <div class="navigation-bar box flex-end">
@@ -47,7 +47,13 @@
 
       <div class="section-1 box">
         <div class="section-wrapper">
-          <p class="title">Hi, I'm Joseph<span class="accent"> Maddox</span></p>
+          <p class="title">
+            Hi<span class="accent-static">,</span> I'm Joseph<span
+              class="accent"
+            >
+              Maddox</span
+            >
+          </p>
           <div class="subtitle-flex">
             <p class="subtitle" style="color: rgb(255, 137, 46)">
               Junior Front-End Devoloper
@@ -60,10 +66,19 @@
 
           <div class="body-flex accent-border">
             <p class="body">
-              Below, you can learn more about me, check out my projects, and see
-              the tools I use. Have any questions or want to chat about a
-              project? Feel free to drop me a message using the contact form
-              below.
+              Below<span class="accent-static">,</span> you can learn more about
+              me and check out my projects and see the tools I use<span
+                class="accent-static"
+                >.</span
+              >
+              Have any questions or want to chat about a project<span
+                class="accent-static"
+                >?</span
+              >
+              Feel free to drop me a message using the contact form below<span
+                class="accent-static"
+                >.</span
+              >
             </p>
           </div>
         </div>
@@ -102,14 +117,22 @@
             </p>
 
             <div class="frame-format">
-              <div class="img-wrapper border-left">
+              <div class="img-wrapper">
                 <img
                   class="frame-img"
                   height="auto"
-                  width="90%"
+                  width="100%"
                   src="https://raw.githubusercontent.com/Lavertsss/Assets/main/jsnotes.png"
                   alt="Notes Image"
                 />
+                <div class="preview">
+                  <a
+                    class="preview-link accent"
+                    href="https://raw.githubusercontent.com/Lavertsss/Assets/main/jsnotes.png"
+                    target="_blank"
+                    >Preview</a
+                  >
+                </div>
               </div>
               <div class="frame-caption">
                 <a
@@ -136,14 +159,22 @@
             </p>
 
             <div class="frame-format">
-              <div class="img-wrapper img-right border-right">
+              <div class="img-wrapper img-right">
                 <img
                   class="frame-img"
                   height="auto"
-                  width="90%"
+                  width="100%"
                   src="https://raw.githubusercontent.com/Lavertsss/Assets/main/mindless.png"
                   alt="Portolio Image"
                 />
+                <div class="preview-left">
+                  <a
+                    class="preview-link accent"
+                    href="https://raw.githubusercontent.com/Lavertsss/Assets/main/jsnotes.png"
+                    target="_blank"
+                    >Preview</a
+                  >
+                </div>
               </div>
               <div class="frame-caption text-right">
                 <a
